# tira-harjoitusty-

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittely.md  testaus.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: main.py
src/entities/: edge.py  room.py  triangle.py  vertex.py
src/services/: a_star.py  logic.py  mst.py  room_service.py  triangulation.py
src/tests/entities/: test_room.py  test_triangle.py  test_vertex.py
src/tests/services/: test_astar.py  test_logic.py  test_mst.py  test_room_service.py  test_triangulation.py
src/ui/: ui.py
