[tool.poetry]
name = "tira-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Essi Savonius <essi.savonius@hotmail.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
